--- a/estilos.css
+++ b/estilos.css
@@ -1,41 +1,41 @@
-/*Ancla de direccionamiento
-.forma{
-    margin: auto;
-    height: auto;
-    width: auto;
-    background-color: cadetblue;
-    overflow: hidden;
+*{
+    margin: 0;
+    padding: 0;
 }
-.forma__cubo{
-    margin: auto;
-    border-radius: 10px;
-    border-style: solid;
-    padding-right: 10%;
-    padding: 15px;
-    width: 500;
-    height: 500;
-    background-color: tomato;
-    overflow: scroll;
+
+.headermenu{
+    font-family: Arial, Helvetica, sans-serif;
+    background: #e8e8e8;
 }
-.forma__circulo{
-    border-radius: 50%;
-    width: 250px;
-    height: 250px;
-    background-color: chartreuse;
+
+.headermenulista{
+    list-style: none;
+    padding: 0;
+    background: #092327;
+    width:52%;
+    max-width: 1000px;
+    margin-right: 0;
+    margin-top: 0s;
 }
-.forma__cubo--verde{
-    width: 200px;
-    height: 200px;
-    background-color: yellowgreen;
-    overflow: auto;
+.headermenulista li a{
+    color: white;
+    padding: 20px;
+    display: block;
 }
-.forma__cubo{
-    background-color: violet;
-    overflow: visible;
+
+.headermenulista li {
+    display: inline-block;
+    text-align: center;
 }
-.forma__cubo--miniatura{
-    margin-top: -50px;
-    background-color: chartreuse;
-    width: 100px;
-    height: 100px;
-}*/
+
+.headermenulista li a:hover{
+    background: #ef8354;
+}
+
+.headermenu figure{
+    width: 210px;
+    height: 180px;
+    margin-top: 10px;
+    margin-left: 5px;
+    background: url(./Recursos/Logo/Nutridays.jfif)
+}
